fix: hide overflow-y on time-axis-container
- overflow-y for the time-axis-container was
not hiding properly on Firefox

--- a/src/app/containers/timeline/timeline.component.css
+++ b/src/app/containers/timeline/timeline.component.css
@@ -4,8 +4,7 @@
   overflow-y: scroll;
 }
 
-.time-axis-container,
-.band-container {
+.time-axis-container {
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
